pluginsdk_delphi/bridgemain.pas

Unit bridgemain;

(**
*
* Ported form bridgemain.h (x64_dbg-PluginSDK v0.10) to Unit Delphi by quygia128
* Home: http://cin1team.biz
* Blog: http://crackertool.blogspot.com (www.crackertool.tk)
* Last Edit: 06.30.2014 by quygia128
* 
* Update: https://github.com/quygia128
*
* Thanks to TQN for Delphi Coding, phpbb3 and BOB for Nice Plugin(Tools) Power By Delphi,
* all my friends at CiN1Team(ALL CIN1'S MEMBER) & Other RCE Team.
* Of course thanks to Mr.eXodia author of x64_dbg, Nice Work!
*
**)

interface

uses
	Windows;

	{$ALIGN 1}                                  // Struct byte alignment
	{$WARN UNSAFE_CODE OFF}
	{$WARN UNSAFE_TYPE OFF}
	{$WARN UNSAFE_CAST OFF}
	//{$DEFINE WIN64}

Type
  DWORD64 = Int64;
  PDWORD64 = PInt64;

{$IFDEF WIN64}
  duint = UInt64;
	dsint = Int64;
	pduint = ^duint;
	pdsint  = ^dsint;
{$ELSE}
	duint = ULong;
	dsint = LongInt;
	pduint = ^duint;
	pdsint = ^dsint;
{$ENDIF} //WIN64


{$IFDEF UNICODE}
	AChar          = AnsiChar;                // Delphi 6,7 SRC Work With Delphi 2009, 2010, XE.x
	PAChar         = PAnsiChar;               // Delphi 6,7 SRC Work With Delphi 2009, 2010, XE.x
{$ELSE}
	AChar          = Char;
	PAChar         = PChar;
{$ENDIF}
	
Const  
	//Bridge defines
	MAX_SETTING_SIZE = 65536;
	DBG_VERSION = 18;
  {$IFDEF WIN64}
		x32_BRIDGE  = 'x64_bridge.dll';
  {$ELSE}
		x32_BRIDGE  = 'x32_bridge.dll';
  {$ENDIF}

//Bridge functions
{BRIDGE_IMPEXP char*}   function BridgeInit(): PAChar; cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP char*}   function BridgeStart(): PAChar; cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP void*}   function BridgeAlloc(size: LongInt): Pointer; cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP void}    procedure BridgeFree(ptr: Pointer); cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP bool}    function BridgeSettingGet(const section: PAChar; const key:PAChar;value: PAChar): Boolean; cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP bool}    function BridgeSettingGetUint(const section: PAChar;const key: PAChar;value: duint): Boolean; cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP bool}    function BridgeSettingSet(const section: PAChar; const key: PAChar; const value: PAChar): Boolean; cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP bool}    function BridgeSettingSetUint(const section: PAChar; const key: PAChar;value: duint): Boolean; cdecl; external x32_BRIDGE;

Const
//Debugger defines
  MAX_LABEL_SIZE = 256;
  MAX_COMMENT_SIZE = 512;
  MAX_MODULE_SIZE = 256;
  MAX_BREAKPOINT_SIZE = 256;
  MAX_SCRIPT_LINE_SIZE = 2048;

  TYPE_VALUE = 1;
  TYPE_MEMORY = 2;
  TYPE_ADDR = 4;
  MAX_MNEMONIC_SIZE = 64;

Type
//Debugger enums
DBGSTATE = (
    initialized,
    paused,
    running,
    stopped
	);

SEGMENTREG = (
    SEG_DEFAULT,
    SEG_ES,
    SEG_DS,
    SEG_FS,
    SEG_GS,
    SEG_CS,
    SEG_SS
);

ADDRINFOFLAGS = (
    flagmodule=1,
    flaglabel=2,
    flagcomment=4,
    flagbookmark=8,
    flagfunction=16
);

BPXTYPE = (
    bp_none=0,
    bp_normal=1,
    bp_hardware=2,
    bp_memory=4
);

FUNCTYPE = (
    FUNC_NONE,
    FUNC_BEGIN,
    FUNC_MIDDLE,
    FUNC_END,
    FUNC_SINGLE
);

LOOPTYPE = (
    LOOP_NONE,
    LOOP_BEGIN,
    LOOP_MIDDLE,
    LOOP_ENTRY,
    LOOP_END
);

DBGMSG = (
    DBG_SCRIPT_LOAD,                // param1=const char* filename,      param2=unused
    DBG_SCRIPT_UNLOAD,              // param1=unused,                    param2=unused
    DBG_SCRIPT_RUN,                 // param1=int destline,              param2=unused
    DBG_SCRIPT_STEP,                // param1=unused,                    param2=unused
    DBG_SCRIPT_BPTOGGLE,            // param1=int line,                  param2=unused
    DBG_SCRIPT_BPGET,               // param1=int line,                  param2=unused
    DBG_SCRIPT_CMDEXEC,             // param1=const char* command,       param2=unused
    DBG_SCRIPT_ABORT,               // param1=unused,                    param2=unused
    DBG_SCRIPT_GETLINETYPE,         // param1=int line,                  param2=unused
    DBG_SCRIPT_SETIP,               // param1=int line,                  param2=unused
    DBG_SCRIPT_GETBRANCHINFO,       // param1=int line,                  param2=SCRIPTBRANCH* info
    DBG_SYMBOL_ENUM,                // param1=SYMBOLCBINFO* cbInfo,      param2=unused
    DBG_ASSEMBLE_AT,                // param1=duint addr,                param2=const char* instruction
    DBG_MODBASE_FROM_NAME,          // param1=const char* modname,       param2=unused
    DBG_DISASM_AT,                  // param1=duint addr,				 param2=DISASM_INSTR* instr
    DBG_STACK_COMMENT_GET,          // param1=duint addr,                param2=STACK_COMMENT* comment
    DBG_GET_THREAD_LIST,            // param1=THREADALLINFO* list,       param2=unused
    DBG_SETTINGS_UPDATED,           // param1=unused,                    param2=unused
    DBG_DISASM_FAST_AT,             // param1=duint addr,                param2=BASIC_INSTRUCTION_INFO* basicinfo
    DBG_MENU_ENTRY_CLICKED          // param1=int hEntry,                param2=unused
);

SCRIPTLINETYPE = (
    linecommand,
    linebranch,
    linelabel,
    linecomment,
    lineempty
);

SCRIPTBRANCHTYPE = (
    scriptnobranch,
    scriptjmp,
    scriptjnejnz,
    scriptjejz,
    scriptjbjl,
    scriptjajg,
    scriptjbejle,
    scriptjaejge,
    scriptcall
);

DISASM_INSTRTYPE = (
    instr_normal,
    instr_branch,
    instr_stack
);

DISASM_ARGTYPE = (
    arg_normal,
    arg_memory
);

STRING_TYPE = (
    str_none,
    str_ascii,
    str_unicode
);

THREADPRIORITY = (
    PriorityIdle = -15,
    PriorityAboveNormal = 1,
    PriorityBelowNormal = -1,
    PriorityHighest = 2,
    PriorityLowest = -2,
    PriorityNormal = 0,
    PriorityTimeCritical = 15,
    PriorityUnknown = $7FFFFFFF
);

THREADWAITREASON = (
    Executive = 0,
    FreePage = 1,
    PageIn = 2,
    PoolAllocation = 3,
    DelayExecution = 4,
    Suspended = 5,
    UserRequest = 6,
    WrExecutive = 7,
    WrFreePage = 8,
    WrPageIn = 9,
    WrPoolAllocation = 10,
    WrDelayExecution = 11,
    WrSuspended = 12,
    WrUserRequest = 13,
    WrEventPair = 14,
    WrQueue = 15,
    WrLpcReceive = 16,
    WrLpcReply = 17,
    WrVirtualMemory = 18,
    WrPageOut = 19,
    WrRendezvous = 20,
    Spare2 = 21,
    Spare3 = 22,
    Spare4 = 23,
    Spare5 = 24,
    WrCalloutStack = 25,
    WrKernel = 26,
    WrResource = 27,
    WrPushLock = 28,
    WrMutex = 29,
    WrQuantumEnd = 30,
    WrDispatchInt = 31,
    WrPreempted = 32,
    WrYieldExecution = 33,
    WrFastMutex = 34,
    WrGuardedMutex = 35,
    WrRundown = 36
);

MEMORY_SIZE =(
    size_byte,
    size_word,
    size_dword,
    size_qword
);

//const
//Debugger typedefs
//VALUE_SIZE = MEMORY_SIZE;

Type

SYM_TYPE = (
    SymNone,
    SymCoff,
    SymCv,
    SymPdb,
    SymExport,
    SymDeferred,
    SymSym,       // .sym file
    SymDia,
    SymVirtual,
    NumSymTypes
);

GUID = packed record
    Data1: DWord; //4
    Data2: WORD; //2
    Data3: WORD; //2
    Data4:array[0..8-1] of Byte;//8
  end;

PIMAGEHLP_MODULE = ^IMAGEHLP_MODULE;
  IMAGEHLP_MODULE = packed record
    SizeOfStruct: DWORD;           // set to sizeof(IMAGEHLP_MODULE)
    BaseOfImage: DWORD;            // base load address of module
    ImageSize: DWORD;              // virtual size of the loaded module
    TimeDateStamp: DWORD;          // date/time stamp from pe header
    CheckSum: DWORD;               // checksum from the pe header
    NumSyms: DWORD;                // number of symbols in the symbol table
    SymType: SYM_TYPE;                // type of symbols loaded
    ModuleName:array[0..32-1] of AnsiChar;         // module name
    ImageName:array[0..255-1] of AnsiChar;         // image name
    LoadedImageName:array[0..255-1] of AnsiChar;   // symbol file name
  end;

PIMAGEHLP_MODULE64 = ^IMAGEHLP_MODULE64;
	IMAGEHLP_MODULE64 = packed record
    SizeOfStruct: DWORD;              // set to sizeof(IMAGEHLP_MODULE64)
    BaseOfImage: int64;               // base load address of module
    ImageSize: DWORD;                 // virtual size of the loaded module
    TimeDateStamp: DWORD;             // date/time stamp from pe header
    CheckSum: DWORD;                  // checksum from the pe header
    NumSyms: DWORD;                   // number of symbols in the symbol table
    SymType: SYM_TYPE;                // type of symbols loaded
    ModuleName:array[0..32-1] of ACHAR;         // module name
    ImageName:array[0..256-1] of ACHAR;         // image name
    LoadedImageName:array[0..256-1] of ACHAR;   // symbol file name
    // new elements: 07-Jun-2002
    LoadedPdbName:array[0..256-1] of ACHAR;     // pdb file name
    CVSig: DWORD;                     // Signature of the CV record in the debug directories
    CVData:array[0..(MAX_PATH * 3)-1] of ACHAR;   // Contents of the CV record
    PdbSig:DWORD;                     // Signature of PDB
    PdbSig70: GUID;                   // Signature of PDB (VC 7 and up)
    PdbAge: DWORD;                    // DBI age of pdb
    PdbUnmatched: LongBool;           // loaded an unmatched pdb
    DbgUnmatched: LongBool;           // loaded an unmatched dbg
    LineNumbers: LongBool;            // we have line number information
    GlobalSymbols: LongBool;          // we have internal symbol information
    TypeInfo: LongBool;               // we have type information
                                      // new elements: 17-Dec-2003
    SourceIndexed: LongBool;          // pdb supports source server
    Publics: LongBool;                // contains public symbols
  end;

PIMAGEHLP_MODULEW64 = ^IMAGEHLP_MODULEW64;
	IMAGEHLP_MODULEW64 = packed record
    SizeOfStruct: DWORD;              // set to sizeof(IMAGEHLP_MODULE64)
    BaseOfImage: Int64;               // base load address of module
    ImageSize: DWORD;                 // virtual size of the loaded module
    TimeDateStamp: DWORD;             // date/time stamp from pe header
    CheckSum: DWORD;                  // checksum from the pe header
    NumSyms: DWORD;                   // number of symbols in the symbol table
    SymType: SYM_TYPE;                // type of symbols loaded
    ModuleName:array[0..32-1] of WCHAR;         // module name
    ImageName:array[0..256-1] of WCHAR;         // image name
    LoadedImageName:array[0..256-1] of WCHAR;   // symbol file name
    // new elements: 07-Jun-2002
    LoadedPdbName:array[0..256-1] of WCHAR;     // pdb file name
    CVSig: DWORD;                     // Signature of the CV record in the debug directories
    CVData:array[0..(MAX_PATH * 3)-1] of WCHAR; // Contents of the CV record
    PdbSig: DWORD;                    // Signature of PDB
    PdbSig70: GUID;                   // Signature of PDB (VC 7 and up)
    PdbAge: DWORD;                    // DBI age of pdb
    PdbUnmatched: LongBool;           // loaded an unmatched pdb
    DbgUnmatched: LongBool;           // loaded an unmatched dbg
    LineNumbers: LongBool;            // we have line number information
    GlobalSymbols: LongBool;          // we have internal symbol information
    TypeInfo: LongBool;               // we have type information
                                      // new elements: 17-Dec-2003
    SourceIndexed: LongBool;          // pdb supports source server
    Publics: LongBool;                // contains public symbols
  end;

PSYMBOLINFO = ^SYMBOLCBINFO;
//typedef void (*CBSYMBOLENUM)(SYMBOLINFO* symbol, void* user);
CBSYMBOLENUM = procedure(symbol: PSYMBOLINFO;user: Pointer);

//Debugger structs
PMEMPAGE = ^MEMPAGE;
MEMPAGE = packed record
    mbi: MEMORY_BASIC_INFORMATION;
    info:array[0..MAX_MODULE_SIZE-1] of AChar;
end;

PMEMMAP = ^MEMMAP;
MEMMAP = packed record
    count: Integer;
    page: PMEMPAGE;
end;

PBRIDGEBP = ^BRIDGEBP;
BRIDGEBP = packed record
    bptype: BPXTYPE;
    addr: duint;
    enabled,
    singleshoot,
    active: Boolean;
    name:array[0..MAX_BREAKPOINT_SIZE-1] of AChar;
    module:array[0..MAX_MODULE_SIZE-1] of AChar;
    slot: WORD;
end;
